Improve code quality based on code review recommendations
Critical Fixes:
- Fix currency mixing bug in balance calculation (now uses first transaction's currency)
- Sanitize exception messages in global handler (prevents information disclosure)
- Add logging for internal errors while returning generic messages to clients

Major Improvements:
- Fix BigDecimal scale validation (handles negative scale correctly)
- Remove unused JPA configuration from application.properties
- Make ErrorResponse fields private with proper encapsulation
- Use specific return types in controllers instead of ResponseEntity<?>
- Make repository methods return consistent collection types

Code Quality Enhancements:
- Add comprehensive JavaDoc comments to all service methods
- Add JavaDoc to controllers, validators, and repository
- Add equals(), hashCode(), and toString() to Transaction model
- Add class-level JavaDoc documentation

All changes tested and verified with passing API tests.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>